tests/compile-fail/integration_suite__integration__type_check__stackless__binop_two_strings.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
  ┌─ <input>:7:21
  │
7 │       textSet(0, 0, "F1" - "2.0");  
  │                     ^^^^ - requires a numeric type
  │                     │     
  │                     a string


